promethus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring1-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: a.research.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 3000
  - host: b.research.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090

  - host: c.research.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kube-prometheus-stack-alertmanager
            port:
              number: 9093
